<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.mainFeatures.LeaveReviewActivity">

    <LinearLayout
        android:id="@+id/responseContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp">

        <EditText
            android:id="@+id/response1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="The workload of the class"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/response2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="Score this class: integer 1-5, 5 being good" />
        <EditText
            android:id="@+id/response3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="Does the professor check attendance?"/>
        <EditText
            android:id="@+id/response4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="Is late homework submission allowed?"/>
        <EditText
            android:id="@+id/response5"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="Other Comments" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submitReview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="Submit" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>