<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Course ID -->
    <TextView
        android:id="@+id/textViewCourseID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Course ID: "
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Course Name -->
    <TextView
        android:id="@+id/textViewCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Course Name: "
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Professor -->
    <TextView
        android:id="@+id/textViewProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Professor: "
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Time -->
    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time: "
        app:layout_constraintTop_toBottomOf="@+id/textViewProfessor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Units -->
    <TextView
        android:id="@+id/textViewUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Units: "
        app:layout_constraintTop_toBottomOf="@+id/textViewTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Register Button -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ReviewsActivity Button -->
    <Button
        android:id="@+id/buttonReviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reviews"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Roster Button -->
    <Button
        android:id="@+id/buttonRoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Roster"
        app:layout_constraintTop_toBottomOf="@+id/buttonReviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>