<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="25dp"
    android:paddingHorizontal="15dp"
    tools:context=".activities.mainFeatures.ReviewsActivity">

    <ScrollView
        android:id="@+id/reviewWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ReviewsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/courseTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews for CSCI 101"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/reviewsListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#79FDD22C"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp" />
        </LinearLayout>
    </ScrollView>


    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/leaveReview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="Leave Review" />

</androidx.constraintlayout.widget.ConstraintLayout>