<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.mainFeatures.MessageActivity">





    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_message"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            android:background="@color/red">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/profile_image_toolbar_message"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:id="@+id/username_ontoolbar_message"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card"
        android:layout_below="@id/bar_layout" />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="10dp"
        android:id="@+id/card"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:id="@+id/camera_gallery_btn"/>


            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:hint=" Message"
                android:inputType="text"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:id="@+id/edit_message_text"
                android:layout_marginTop="14dp"
                android:background="@drawable/et_text" />


            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:enabled="false"
                android:background="@drawable/send"
                android:id="@+id/send_messsage_btn"
                android:layout_margin="10dp"/>






        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>