...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name: "
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

...
